k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devguard
  labels:
    name: devguard
    app.kubernetes.io/name: devguard
    app.kubernetes.io/version: "2.4.0"
